Added escape char

--- a/GrammarReader.csproj
+++ b/GrammarReader.csproj
@@ -8,10 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="bin\Debug\net8.0\test_grammar.txt" />
+    <Content Include="bin\Debug\test_grammar.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="bin\Debug\net8.0\" />
     <Folder Include="Code\Class\" />
   </ItemGroup>
 
