--- a/GrammarReader.csproj
+++ b/GrammarReader.csproj
@@ -8,11 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="bin\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <None Remove="bin\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Test\Files\test.txt" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="bin\Debug\net8.0\" />
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
 </Project>
