Added unit tests for parser

--- a/GrammarParser.csproj
+++ b/GrammarParser.csproj
@@ -9,12 +9,11 @@
 
   <ItemGroup>
     <Compile Remove="bin\**" />
+    <Compile Remove="Test\**" />
     <EmbeddedResource Remove="bin\**" />
+    <EmbeddedResource Remove="Test\**" />
     <None Remove="bin\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Test\Files\test.txt" />
+    <None Remove="Test\**" />
   </ItemGroup>
 
   <ItemGroup>
