--- a/Tests/Nt.SyntaxParser.Tests.csproj
+++ b/Tests/Nt.SyntaxParser.Tests.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application2.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Application\Nt.SyntaxParser.Application.csproj" />
+    <ProjectReference Include="..\Domain\Nt.SyntaxParser.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
