--- a/Domain/Nt.SyntaxParser.Domain.csproj
+++ b/Domain/Nt.SyntaxParser.Domain.csproj
@@ -8,7 +8,7 @@
     <PackageId>Prod.Nt.SyntaxParser</PackageId>
     <AssemblyName>Nt.SyntaxParser</AssemblyName>
     <RootNamespace>Nt.SyntaxParser</RootNamespace>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <Authors>Natvs</Authors>
     <Description>Library containing tools for syntax parsing.
 Includes a grammar string parser and a simple text parser.</Description>
@@ -16,7 +16,8 @@ Includes a grammar string parser and a simple text parser.</Description>
     <RepositoryUrl>https://github.com/Natvs/Nt.SyntaxParser</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>parser ; grammar</PackageTags>
-    <PackageReleaseNotes>Fix parser not resetting grammar when mulitple parse on the same instance of parser</PackageReleaseNotes>
+    <PackageReleaseNotes>Rules and regular expressions are not ordered anymore.
+Parsing multiple times will correctly reset the parser datas.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
