--- a/Domain/Nt.SyntaxParser.Domain.csproj
+++ b/Domain/Nt.SyntaxParser.Domain.csproj
@@ -8,7 +8,7 @@
     <PackageId>Prod.Nt.SyntaxParser</PackageId>
     <AssemblyName>Nt.SyntaxParser</AssemblyName>
     <RootNamespace>Nt.SyntaxParser</RootNamespace>
-    <Version>1.0.3</Version>
+    <Version>1.0.5</Version>
     <Authors>Natvs</Authors>
     <Description>Library containing tools for syntax parsing.
 Includes a grammar string parser and a simple text parser.</Description>
@@ -16,7 +16,7 @@ Includes a grammar string parser and a simple text parser.</Description>
     <RepositoryUrl>https://github.com/Natvs/Nt.SyntaxParser</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>parser ; grammar</PackageTags>
-    <PackageReleaseNotes>Namespaces have been renamed.</PackageReleaseNotes>
+    <PackageReleaseNotes>Added methods for inserting symbols in a rule derivation</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
