--- a/Domain/Nt.SyntaxParser.Domain.csproj
+++ b/Domain/Nt.SyntaxParser.Domain.csproj
@@ -36,6 +36,7 @@ Includes a grammar string parser and a simple text parser.</Description>
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nt.Automaton" Version="1.0.0" />
     <PackageReference Include="Nt.Parser" Version="1.0.0" />
   </ItemGroup>
 
