--- a/Domain/Nt.SyntaxParser.Domain.csproj
+++ b/Domain/Nt.SyntaxParser.Domain.csproj
@@ -8,7 +8,7 @@
     <PackageId>Nt.SyntaxParser</PackageId>
     <AssemblyName>Nt.SyntaxParser</AssemblyName>
     <RootNamespace>Nt</RootNamespace>
-    <Version>1.1.0</Version>
+    <Version>1.1.2</Version>
     <Authors>Natvs</Authors>
     <Description>Library containing tools for syntax parsing.
 Includes a grammar string parser and a simple text parser.</Description>
@@ -16,7 +16,7 @@ Includes a grammar string parser and a simple text parser.</Description>
     <RepositoryUrl>https://github.com/Natvs/Nt.SyntaxParser</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>parser ; grammar ; syntax</PackageTags>
-    <PackageReleaseNotes>Recursive importations are now supported</PackageReleaseNotes>
+    <PackageReleaseNotes>Add methods to remove terminals, non-terminals, rules or regew in grammar.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -37,7 +37,7 @@ Includes a grammar string parser and a simple text parser.</Description>
 
   <ItemGroup>
     <PackageReference Include="Nt.Automaton" Version="1.0.0" />
-    <PackageReference Include="Nt.Parser" Version="1.0.0" />
+    <PackageReference Include="Nt.Parser" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
