--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # Custom files
+.editorconfig
 nuget.config
-.obsidian/
 
 # User-specific files
 *.rsuser
