--- a/Domain/Nt.SyntaxParser.Domain.csproj
+++ b/Domain/Nt.SyntaxParser.Domain.csproj
@@ -8,7 +8,7 @@
     <PackageId>Nt.SyntaxParser</PackageId>
     <AssemblyName>Nt.SyntaxParser</AssemblyName>
     <RootNamespace>Nt</RootNamespace>
-    <Version>1.1.2</Version>
+    <Version>1.1.3</Version>
     <Authors>Natvs</Authors>
     <Description>Library containing tools for syntax parsing.
 Includes a grammar string parser and a simple text parser.</Description>
@@ -16,7 +16,7 @@ Includes a grammar string parser and a simple text parser.</Description>
     <RepositoryUrl>https://github.com/Natvs/Nt.SyntaxParser</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>parser ; grammar ; syntax</PackageTags>
-    <PackageReleaseNotes>Add methods to remove terminals, non-terminals, rules or regew in grammar.</PackageReleaseNotes>
+    <PackageReleaseNotes>Fix a bug with terminals and non-terminals defined multiple times</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
